--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Ray_Tracing_IOW)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Ray_Tracing_IOW main.cpp Ray.cpp Ray.h)
+add_executable(Ray_Tracing_IOW main.cpp ray.cpp ray.h hitable.h sphere.cpp sphere.h hitable_list.cpp hitable_list.h)
 
 target_include_directories(Ray_Tracing_IOW PUBLIC
         "${PROJECT_BINARY_DIR}"
