--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,10 @@ project(Ray_Tracing_IOW)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Ray_Tracing_IOW main.cpp ray.h camera.h
-        objects/hitable.h objects/sphere.cpp objects/sphere.h objects/hitable_list.cpp objects/hitable_list.h
-        materials/material.h materials/lambertian.cpp materials/lambertian.h materials/metal.cpp materials/metal.h hit_record.h materials/dielectric.cpp materials/dielectric.h
-        sdl_window/color.cpp sdl_window/color.h sdl_window/renderer.cpp sdl_window/renderer.h)
+add_executable(Ray_Tracing_IOW main.cpp Ray.h Camera.h
+        objects/Hitable.h objects/Sphere.cpp objects/Sphere.h objects/HitableList.cpp objects/HitableList.h
+        materials/Material.h materials/Lambertian.cpp materials/Lambertian.h materials/Metal.cpp materials/Metal.h HitRecord.h materials/Dielectric.cpp materials/Dielectric.h
+        sdl_window/Color.cpp sdl_window/Color.h sdl_window/Renderer.cpp sdl_window/Renderer.h)
 
 find_library(sdl SDL2.lib "C:/dev/VulkanSDK/1.2.176.1/Third-Party/Bin/")
 
